--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.2",
     "web-vitals": "^2.1.3"
   },
-  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
